--- a/Code/eunika/weather-app/stylesheet.css
+++ b/Code/eunika/weather-app/stylesheet.css
@@ -2,7 +2,6 @@ body, html {
   height: 100%;
   font-family: "Century Gothic", sans-serif;
   background: skyblue;
-  display: grid;
 }
 
 header {
@@ -18,6 +17,11 @@ header {
   background: #FFF;
   padding: 30px;
   text-align: center;
+}
+
+.icon {
+    width: 100px;
+    height: 100px;
 }
 
 #text {
