--- a/Code/Al/todoapp_renamed/todoapp/templates/todoapp/index.html
+++ b/Code/Al/todoapp_renamed/todoapp/templates/todoapp/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>{{message_views_dict}}</h1>
-    <form action="{% url 'todoapp_urls_py:save_todo_path' %}" method="post">
+    <form action="{% url 'todoapp_urls_nickname:save_todo_path_nickname' %}" method="post">
       {% csrf_token %}
       <input type="text" name="todo_text_input_html"/>
       <button type="submit">submit</button>
