Updated Library App

--- a/Code/darren/django/remake_todo_lab/remake_todo/templates/remake_todo/detail.html
+++ b/Code/darren/django/remake_todo_lab/remake_todo/templates/remake_todo/detail.html
@@ -39,5 +39,5 @@
     </ul>
     {% endif %}
   </body>
-  <footer><a href="{% url 'remake_todo:index' %}">Return</a>
+  <footer><a href="{% url 'remake_todo:index' %}">Return</a></footer>
 </html>
